--- a/Tarea_Grupal/index.html
+++ b/Tarea_Grupal/index.html
@@ -8,7 +8,7 @@
     <link href="public/vendor/bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-
+PRUEBA
     <script src="public/vendor/bootstrap.bundle.min.js"></script>
 </body>
 </html>
